Mon Aug  9 14:50:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DataListenerControl_T.h:
        * connectors/dds4ccm/impl/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.h:
        * connectors/dds4ccm/impl/InstanceHandleManager_T.h:
        * connectors/dds4ccm/impl/LocalObject_T.h:
        * connectors/dds4ccm/impl/LocalObject_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.h:
          Renamed DDS4CCM_LocalObject to LocalObject, no need for DDS4CCM
          prefix, it is already in that namespace. Added more logging in all
          handle_exception methods

        * connectors/dds4ccm/impl/DDS4CCM_LocalObject_T.h:
        * connectors/dds4ccm/impl/DDS4CCM_LocalObject_T.cpp:
          Removed these files.

Mon Aug  9 06:42:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.h:
        * connectors/dds4ccm/impl/DDS4CCM_LocalObject_T.h:
          Removed not needed semi colons

Sun Aug  8 12:46:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
          Pass the control and conditionmanager by reference to the listeners,
          they are always there and no need to check them for nill

        * etc/ciao_dds4ccm.doxygen:
          Updated links to TAO doxygen documentation

Thu Aug  5 15:46:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
